--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
     "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
