--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "material-ui-dropzone": "^3.5.0",
+    "pdfobject": "^2.2.4",
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
