--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.9.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "formik": "^2.2.6",
     "html-to-draftjs": "^1.5.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
